unpackaged/main/default/objects/Order/fields/Adresse_Patient__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Patient__c</fullName>
    <description>2PACE</description>
    <label>Adresse Patient</label>
    <type>TextArea</type>
</CustomField>