unpackaged/main/default/objects/Order/fields/Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>Animal_Name__c</fullName>
    <label>Animal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>