unpackaged/main/default/objects/Order/fields/Code_Genre_Patient__c.field-meta.xml
<CustomField>
    <fullName>Code_Genre_Patient__c</fullName>
    <description>2PACE</description>
    <label>Code Genre Patient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>