unpackaged/main/default/objects/Order/fields/Code_Postal_Patient__c.field-meta.xml
<CustomField>
    <fullName>Code_Postal_Patient__c</fullName>
    <description>2PACE</description>
    <label>Code Postal Patient</label>
    <length>18</length>
    <type>Text</type>
</CustomField>