unpackaged/main/default/objects/Order/fields/Commentaire_Dossier__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_Dossier__c</fullName>
    <description>Commentaire sur le dossier</description>
    <label>📝 Commentaire Dossier</label>
    <type>TextArea</type>
</CustomField>