unpackaged/main/default/objects/Order/fields/Date_Creation_Hexalis__c.field-meta.xml
<CustomField>
    <fullName>Date_Creation_Hexalis__c</fullName>
    <description>2PACE
Date de creation dans Hexalis du dossier</description>
    <label>Date Creation Hexalis</label>
    <type>DateTime</type>
</CustomField>