unpackaged/main/default/objects/Order/fields/Date_Prelevement__c.field-meta.xml
<CustomField>
    <fullName>Date_Prelevement__c</fullName>
    <description>2PACE</description>
    <label>Date Prélèvement</label>
    <type>DateTime</type>
</CustomField>