unpackaged/main/default/objects/Order/fields/IDDossier__c.field-meta.xml
<CustomField>
    <fullName>IDDossier__c</fullName>
    <description>2PACE
Numéro de dossier Hexalis</description>
    <externalId>true</externalId>
    <label>IDDossier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>