unpackaged/main/default/objects/Order/fields/Message_Integration_Hexalis__c.field-meta.xml
<CustomField>
    <fullName>Message_Integration_Hexalis__c</fullName>
    <label>Message Integration Hexalis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>