unpackaged/main/default/objects/Order/fields/Mobile_Patient__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Patient__c</fullName>
    <description>2PACE</description>
    <label>Mobile Patient</label>
    <length>50</length>
    <type>Text</type>
</CustomField>