unpackaged/main/default/objects/Order/fields/Solde__c.field-meta.xml
<CustomField>
    <fullName>Solde__c</fullName>
    <description>2PACE</description>
    <label>Solde</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>