unpackaged/main/default/objects/Order/fields/Tech_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Tech_Ext_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Tech Ext Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>