unpackaged/main/default/objects/Order/fields/Tel_Patient__c.field-meta.xml
<CustomField>
    <fullName>Tel_Patient__c</fullName>
    <description>2PACE</description>
    <label>Tel Patient</label>
    <length>50</length>
    <type>Text</type>
</CustomField>