unpackaged/main/default/objects/Order/fields/Ville_Patient__c.field-meta.xml
<CustomField>
    <fullName>Ville_Patient__c</fullName>
    <description>2PACE</description>
    <label>Ville Patient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>