unpackaged/main/default/objects/Order/recordTypes/Cerbavet_Analyses.recordType-meta.xml
<RecordType>
    <fullName>Cerbavet_Analyses</fullName>
    <active>true</active>
    <label>💉 Cerbavet Analyses</label>
    
    
    
    
    
</RecordType>