unpackaged/main/default/objects/Order/recordTypes/Cerbavet_College.recordType-meta.xml
<RecordType>
    <fullName>Cerbavet_College</fullName>
    <active>true</active>
    <label>🎓 Cerbavet College</label>
</RecordType>