unpackaged/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>IDDossier__c</columns>
    <columns>Statut_Compte_Rendu__c</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>blng__BillingAccount__c</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>SBQQ__TaxAmount__c</columns>
    <columns>blng__BilledAmountwithouttax__c</columns>
    <columns>Remise_commerciale_Total__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>blng__InvoiceBatch__c</columns>
    <columns>ORDER.RECORDTYPE</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.CREATED_DATE</field>
        <operation>equals</operation>
        <value>3/7/2024 12:00 AM</value>
    </filters>
    <label>Toutes les commandes</label>
</ListView>