unpackaged/main/default/objects/Order/listViews/Commandes_Proprio_facturer.listView-meta.xml
<ListView>
    <fullName>Commandes_Proprio_facturer</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>IDDossier__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>SBQQ__TaxAmount__c</columns>
    <columns>blng__BilledAmountwithouttax__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Email_Patient__c</columns>
    <columns>blng__InvoiceBatch__c</columns>
    <columns>blng__BillNow__c</columns>
    <columns>ORDER.RECORDTYPE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <filters>
        <field>blng__InvoiceBatch__c</field>
        <operation>equals</operation>
        <value>Cerbavet Analysis Proprio</value>
    </filters>
    <label>Commandes Proprio à facturer</label>
</ListView>