unpackaged/main/default/objects/Order/listViews/Toutes_les_commandes_Cerbavet_College.listView-meta.xml
<ListView>
    <fullName>Toutes_les_commandes_Cerbavet_College</fullName>
    <columns>Conditions_de_Reglement_Cerbavet__c</columns>
    <columns>SBQQ__Contracted__c</columns>
    <columns>IDDossier__c</columns>
    <columns>Statut_Compte_Rendu__c</columns>
    <columns>Facturable__c</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>blng__BillingAccount__c</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>blng__BilledAmountwithouttax__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>blng__InvoiceBatch__c</columns>
    <columns>ORDER.RECORDTYPE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Cerbavet_College</value>
    </filters>
    <filters>
        <field>ORDERS.EFFECTIVE_DATE</field>
        <operation>equals</operation>
        <value>4/1/2023</value>
    </filters>
    <label>Toutes les commandes Cerbavet College</label>
</ListView>