unpackaged/main/default/objects/Order/listViews/Toutes_les_commandes_de_cette_semaine.listView-meta.xml
<ListView>
    <fullName>Toutes_les_commandes_de_cette_semaine</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>blng__InvoiceBatch__c</columns>
    <columns>ORDER.RECORDTYPE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les commandes de cette semaine</label>
</ListView>