unpackaged/main/default/objects/Order/listViews/Toutes_les_commandes_en_Brouillon.listView-meta.xml
<ListView>
    <fullName>Toutes_les_commandes_en_Brouillon</fullName>
    <columns>IDDossier__c</columns>
    <columns>Facturable__c</columns>
    <columns>Statut_Compte_Rendu__c</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>blng__BillingAccount__c</columns>
    <columns>Email_Patient__c</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>blng__BilledAmountwithouttax__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>blng__InvoiceBatch__c</columns>
    <columns>ORDER.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Cerbavet_Analyses</value>
    </filters>
    <filters>
        <field>blng__InvoiceBatch__c</field>
        <operation>equals</operation>
        <value>Cerbavet Analysis Proprio</value>
    </filters>
    <filters>
        <field>Date_Creation_Hexalis__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2023 12:00 AM</value>
    </filters>
    <label>Toutes les commandes en Brouillon</label>
</ListView>